# dino

./: .gitignore  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  cr  dino
assets/: ARCADECLASSIC.TTF.h  background.png.h  buildings.png.h  gameover.mp3.h  jump.mp3.h  jump.wav.h  road.png.h
assets/dino/: 1.png.h  2.png.h  3.png.h  4.png.h  5.png.h  dino.h  over.png.h
assets/obstacles/: bench.png.h  boom.png.h  bushInPot.png.h  drone1.png.h  drone2.png.h  obstacles.h  pit.png.h  trash.png.h
src/: Button.cpp  Button.h  Dino.cpp  Dino.h  Game.cpp  Game.h  Globals.cpp  Globals.h  Menu.cpp  Menu.h  Object.cpp  Object.h  ObjectManager.cpp  ObjectManager.h  Run.cpp  Run.h  Score.cpp  Score.h  assets.h  main.cpp
src/assets/: lines.png-autosave.kra
src/assets/dino/: 1.png~
src/assets/obstacles/: bench.png~  bushInPot.png~  trash.png~
src/gameObjects/: Background.h  Dino.cpp  Dino.h
